third_party/move/move-model/tests/sources/compile_via_model/simple.exp
error: assignment only allowed in spec var updates
  ┌─ tests/sources/compile_via_model/simple.move:3:72
  │
3 │     fun showing_sequential_not_supported_yet(x: u64): u64 { let x = x; x = x + 1; x }
  │                                                                        ^^^^^^^^^

error: only binding `let p = e; ...` allowed here
  ┌─ tests/sources/compile_via_model/simple.move:3:72
  │
3 │     fun showing_sequential_not_supported_yet(x: u64): u64 { let x = x; x = x + 1; x }
  │                                                                        ^^^^^^^^^
